Layout issue on the results page #13

--- a/twisa-frontend/twisa-app/src/app/results/results.component.css
+++ b/twisa-frontend/twisa-app/src/app/results/results.component.css
@@ -17,10 +17,17 @@ img {
     padding: 10px;
 }
 
+.value-entry {
+    height: 30px;
+    line-height: 30px;
+}
 .value-entry img {
     width: 30px;
+    
 }
 
 .label-entry {
     font-weight: bold;
+    height: 30px;
+    line-height: 30px;
 }
